Fix position to center on mobile responsive rules

--- a/app/design/frontend/Vass/PU/web/css/source/_pages.less
+++ b/app/design/frontend/Vass/PU/web/css/source/_pages.less
@@ -86,3 +86,14 @@
         }
     }
 }
+
+//
+//  Mobile
+//  _____________________________________________
+
+.media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__s) {
+    .pages {
+        float: none !important;
+    }
+}
+
